# mailscout

./: .env.example  .gitignore  README.md  autoscaler-compose.yml  cat.txt  docker-bake.hcl  docker-compose.yml  fly.autoscaler.toml  fly.backend.toml  fly.frontend.toml  fly.toml  fly.worker.toml  host-config.yml
.github/workflows/: deploy-fly.yml  docker-bake.yml
autoscaler/: Dockerfile  autoscaler.py  config.py  fly.autoscaler.toml  requirements.txt
backend/: Dockerfile  README.md  fly.backend.toml  pyproject.toml
backend/alembic/: alembic.ini  env.py
backend/alembic/versions/: 0001_init.py
backend/app/: config.py  db.py  main.py  run_migrations.py  worker.py
backend/app/models/: __init__.py  email_result.py  upload.py  user.py
backend/app/routers/: auth.py  results.py  uploads.py
backend/app/services/: chunker.py  scoring.py  storage.py
backend/app/utils/: helpers.py  parser.py
frontend/: Dockerfile  fly.frontend.toml  index.html  nginx-local.conf  nginx.conf  package.json  vite.config.js
frontend/src/: App.jsx  api.js
frontend/src/components/: FileUpload.jsx  Navbar.jsx  ProgressTracker.jsx  ResultsTable.jsx  SummaryCards.jsx  UploadPreview.jsx
frontend/src/pages/: Dashboard.jsx  Home.jsx  Results.jsx  Upload.jsx
worker/: Dockerfile  fly.worker.toml  requirements.txt  worker.py
worker/utils/: __init__.py  mx_limiter.py
worker/verifier/: __init__.py  catchall_checker.py  disposable.py  dns_checker.py  dns_engine.py  provider_profiles.py  role_detector.py  score_engine.py  smtp_checker.py  smtp_engine.py  syntax_engine.py
