[tool.poetry]
name = "mailscout-backend"
version = "0.1.0"
description = "MailScout FastAPI backend service"
authors = ["MailScout <noreply@mailscout.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
python-multipart = "^0.0.6"
asyncpg = "^0.29.0"
SQLAlchemy = "^2.0.29"
alembic = "^1.13.1"
redis = "^5.0.1"
aiofiles = "^23.2.1"
pydantic = "^2.0"
pydantic-settings = "^2.2"
openpyxl = "^3.1.2"
xlrd = "^2.0.1"
psycopg2-binary = "^2.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
